Menus were fixed because of failed overflow test.

--- a/postcss/blocks/main-nav.css
+++ b/postcss/blocks/main-nav.css
@@ -138,7 +138,6 @@
   list-style-type: none;
   @media (--tablet) {
     display: flex;
-    flex-wrap: wrap;
     justify-content: flex-end;
     width: 500px;
   }
@@ -228,7 +227,7 @@
   @media (--tablet) {
     position: absolute;
     left: 0;
-    bottom: -56px;
+    top: calc(100% + 3px);
     z-index: 20;
     width: 425px;
     justify-content: flex-start;
@@ -272,7 +271,7 @@
   margin: 0;
   padding: 0;
   position: absolute;
-  bottom: -40px;
+  top: calc(100% + 18px);
   left: calc((100% - 1050px) / 2);
   list-style-type: none;
   @media (--desktop) {
